## Change Log 1.0.3B

---12/5/2025

* Tool tips added

* Stubtitles creation fixed (these now result in a container file with track 1 subs based on the format and font chosen)

* Timestamp "rolls" the way it is suppsoed to for single clips

* Fixed issues where multiple day uncut clips timestamp didn't "jump" to the proper day.

* Splash Screen now 2 seconds

* UI Updates with dropdowns and text preview / format example

* Font Selector with ability to include all user's system fonts

* Added the ability to convert only to mp4 for modern devices or pass though AVI to MOV.

* Set Default Window Size

* Added a popup "save to" location when starting the file process

* Fixed batch handling issue where it broke after just a couple files.

* Recursive folder batch handling (subfolders will also convert, max depth 2)

* Added button to open temp folder

* Added ability to change output folder (it will default to the input folder if populated already)


--- 12/1/25

*  Calling this 1.0 Beta!

* Now have actual RDT being read - no more trickery reading the first timestamp.



--- 11/30/25

* Added passthrough (convert-only) mode alongside burn-in mode.

* Added missing-metadata behavior options: stop with error, convert without burn-in, or skip file.

* Updated dvmetaburn.zsh to: Parse full dvrescue JSON instead of only the first frame, detect the first valid rdt anywhere in the file and fall back based on --missing-meta= instead of crashing.

* Support --burn-mode=passthrough for no-metadata conversions.

* Added added BurnMode and MissingMetaMode with UI controls for so its now possible to burn-in  text OR convert-only, and changed how missing-metadata behavior is handled (i.e. hopefully won't just crash now)

* Made log selectablew

* Added DVRESCUE debug function (to check to see if metadata is missing or any other issues)

* Added stop and clear log button, as well as made log copyable instead of view only and some other debug stuff
